--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<groupId>org.alliancegenome</groupId>
 	<artifactId>agr_curation_api</artifactId>
 	<name>AGR Curation :: API</name>
-	<version>0.0.0-SNAPSHOT</version>
+	<version>0.0.0</version>
 	<description>This software is for using the curation api as a library</description>
 	<url>https://github.com/alliance-genome/agr_curation</url>
 
