--- a/src/main/cliapp/package.json
+++ b/src/main/cliapp/package.json
@@ -29,7 +29,7 @@
         "moment": "^2.29.1",
         "primeflex": "3.1.0",
         "primeicons": "^5.0.0",
-        "primereact": "7.2.0",
+        "primereact": "^8.7.3",
         "prismjs": "1.9.0",
         "react": "^17.0.1",
         "react-app-polyfill": "^1.0.6",
