--- a/.github/workflows/github-actions-PR-validation.yml
+++ b/.github/workflows/github-actions-PR-validation.yml
@@ -75,8 +75,10 @@ jobs:
         run: |
           git fetch -q origin ${{ github.base_ref }} ${{ github.head_ref }}
           git diff --name-only origin/${{ github.base_ref }} origin/${{ github.head_ref }}
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js (v16)
         uses: actions/setup-node@v3
+        with:
+          node-version: 16
       - name: Report Node version
         run: |
           node -v
