--- a/src/main/cliapp/package.json
+++ b/src/main/cliapp/package.json
@@ -38,7 +38,7 @@
         "react-moment": "^1.1.1",
         "react-query": "^3.34.15",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "4.0.0",
+        "react-scripts": "^5.0.0",
         "react-transition-group": "^4.4.1",
         "sass": "^1.32.8",
         "use-immer": "^0.7.0"
