--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@
 		<okta.version>3.0.1</okta.version>
 		<okta.authn.version>2.0.0</okta.authn.version>
 		<okta-jwt.version>0.5.1</okta-jwt.version>
-		<quarkus.platform.version>3.0.0.CR2</quarkus.platform.version>
-		<surefire-plugin.version>3.0.1.Final</surefire-plugin.version>
+		<quarkus.platform.version>3.0.1.Final</quarkus.platform.version>
+		<surefire-plugin.version>3.0.0-M7</surefire-plugin.version>
 	</properties>
 
 	<scm>
