--- a/pom.xml
+++ b/pom.xml
@@ -382,9 +382,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.9.1</version>
-				<configuration>
-					<source>8</source>
-				</configuration>
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
@@ -444,6 +441,8 @@
 				<version>${compiler-plugin.version}</version>
 				<configuration>
 					<parameters>${maven.compiler.parameters}</parameters>
+					<source>${maven.compiler.source}</source>
+					<target>${maven.compiler.target}</target>
 				</configuration>
 			</plugin>
 			<plugin>
