--- a/src/main/resources/hibernate/custom-index-settings.json
+++ b/src/main/resources/hibernate/custom-index-settings.json
@@ -5,5 +5,6 @@
   "max_result_window": 3000000,
   "translog.sync_interval": "60s",
   "translog.flush_threshold_size": "4096mb",
-  "translog.durability": "async"
+  "translog.durability": "async",
+  "mapping.total_fields.limit": 2000
 }
