--- a/.ebextensions/aws-autoscaling.config
+++ b/.ebextensions/aws-autoscaling.config
@@ -1,6 +1,6 @@
 option_settings:
   aws:ec2:instances:
-    InstanceTypes: m5.2xlarge
+    InstanceTypes: m6i.2xlarge
   aws:autoscaling:asg:
     Availability Zones: Any
     MaxSize: 1
