Use Jsoup for URL redirect

--- a/pom.xml
+++ b/pom.xml
@@ -358,6 +358,12 @@
 			<artifactId>reflections</artifactId>
 			<version>0.10.2</version>
 		</dependency>
+		
+		<dependency>
+    		<groupId>org.jsoup</groupId>
+    		<artifactId>jsoup</artifactId>
+    		<version>1.13.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
