Added refresh config changes and switch logging from jboss to quarkus

--- a/src/main/cliapp/Makefile
+++ b/src/main/cliapp/Makefile
@@ -6,6 +6,9 @@ all:
 run:
 	npm start
 
+runalpha:
+	export API_URL=https://alpha-curation.alliancegenome.org; make run; unset API_URL
+
 build:
 	npm run-script build
 
