--- a/.github/workflows/github-actions-PR-validation.yml
+++ b/.github/workflows/github-actions-PR-validation.yml
@@ -8,7 +8,7 @@ on:
       - production
 jobs:
   check-branching-rules:
-    if: github.event.action != 'edited' || github.event.changes.base
+    #if: github.event.action != 'edited' || github.event.changes.base
     runs-on: ubuntu-20.04
     steps:
       - name: Check out repository code
@@ -17,7 +17,7 @@ jobs:
         run: |
           bash ci-scripts/check-branching.sh ${{ github.base_ref }} ${{ github.head_ref }}
   verify-test-api:
-    if: github.event.action != 'edited' || github.event.changes.base
+    #if: github.event.action != 'edited' || github.event.changes.base
     runs-on: ubuntu-20.04
     steps:
       - name: Report workflow details
@@ -61,7 +61,7 @@ jobs:
           make integration-test
 
   verify-test-ui:
-    if: github.event.action != 'edited' || github.event.changes.base
+    #if: github.event.action != 'edited' || github.event.changes.base
     runs-on: ubuntu-20.04
     steps:
       - name: Report workflow details
@@ -88,7 +88,7 @@ jobs:
           npm test -- --watchAll=false
           npm run build
   test-build-docker-image:
-      if: github.event.action != 'edited' || github.event.changes.base
+      #if: github.event.action != 'edited' || github.event.changes.base
       runs-on: ubuntu-20.04
       steps:
         - name: Check out repository code
