--- a/.github/workflows/github-release-build-and-deploy.yml
+++ b/.github/workflows/github-release-build-and-deploy.yml
@@ -14,7 +14,7 @@ jobs:
       uses: aws-actions/configure-aws-credentials@v2
       with:
         role-to-assume: ${{secrets.GH_ACTIONS_AWS_ROLE}}
-        role-session-name: gh-actions-${{github.workflow}}-build-image.${{github.run_id}}.${{github.run_number}}.${{github.run_attempt}}
+        role-session-name: gh-actions-${{github.run_id}}.${{github.run_number}}.${{github.run_attempt}}-build-image
         aws-region: us-east-1
     - name: Amazon ECR login
       id: login-ecr
@@ -86,7 +86,7 @@ jobs:
       uses: aws-actions/configure-aws-credentials@v2
       with:
         role-to-assume: ${{secrets.GH_ACTIONS_AWS_ROLE}}
-        role-session-name: gh-actions-${{github.workflow}}-eb-deploy-production.${{github.run_id}}.${{github.run_number}}.${{github.run_attempt}}
+        role-session-name: gh-actions-${{github.run_id}}.${{github.run_number}}.${{github.run_attempt}}-eb-deploy-production
         aws-region: us-east-1
     - name: Deploy to EB
       uses: einaregilsson/beanstalk-deploy@v21
@@ -119,7 +119,7 @@ jobs:
       uses: aws-actions/configure-aws-credentials@v2
       with:
         role-to-assume: ${{secrets.GH_ACTIONS_AWS_ROLE}}
-        role-session-name: gh-actions-${{github.workflow}}-eb-deploy-beta.${{github.run_id}}.${{github.run_number}}.${{github.run_attempt}}
+        role-session-name: gh-actions-${{github.run_id}}.${{github.run_number}}.${{github.run_attempt}}-eb-deploy-beta
     - name: Deploy to EB
       uses: einaregilsson/beanstalk-deploy@v21
       with:
