--- a/.github/workflows/alpha-build-and-deploy.yml
+++ b/.github/workflows/alpha-build-and-deploy.yml
@@ -117,6 +117,7 @@ jobs:
     - name: Deploy to EB
       uses: einaregilsson/beanstalk-deploy@v21
       with:
+        aws_session_token: ${{env.AWS_SESSION_TOKEN}}
         application_name: curation-app
         environment_name: curation-alpha
         version_label: ${{ env.tagname }}
