--- a/.github/workflows/github-release-build-and-deploy.yml
+++ b/.github/workflows/github-release-build-and-deploy.yml
@@ -91,6 +91,7 @@ jobs:
     - name: Deploy to EB
       uses: einaregilsson/beanstalk-deploy@v21
       with:
+        aws_session_token: ${{env.AWS_SESSION_TOKEN}}
         application_name: curation-app
         environment_name: curation-production
         version_label: ${{ github.event.release.tag_name }}
@@ -123,6 +124,7 @@ jobs:
     - name: Deploy to EB
       uses: einaregilsson/beanstalk-deploy@v21
       with:
+        aws_session_token: ${{env.AWS_SESSION_TOKEN}}
         application_name: curation-app
         environment_name: curation-beta
         version_label: ${{ github.event.release.tag_name }}
